--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,7 +97,7 @@ address = {street = "177 Huntington Avenue", city = "Boston", region = "MA", pos
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = "" # {latitude = "37.4275", longitude = "-122.1697"}
+coordinates = {latitude = "37.4275", longitude = "-122.1697"}
 
 # Directions for visitors to locate you.
 directions = "Floor 22"
