--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Floor 22, 177 Huntington Avenue", city = "Boston", region = "MA", postcode = "02115", country = "United States", country_code = "US"}
+address = {street = "177 Huntington Avenue", city = "Boston", region = "MA", postcode = "02115", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
@@ -111,9 +111,9 @@ appointment_url = ""
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
-contact_links = [{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/bob_smiley_"}]
+contact_links = []
 #[
-#  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
+#  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/bob_smiley_"},
 #  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
