--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -177,12 +177,12 @@ plugins_js  = []
 # Avatars.
 # An avatar is an image that appears next to a user's name.
 # An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
-[photo]
+[avatar]
   # Get user avatars from Gravatar.com? (true/false)
   gravatar = false
 
   # Choose a shape for avatar images. Options: circle, square.
-  shape = "circle"
+  shape = "square"
 
 # Configuration of publication pages.
 [publications]
