--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Science Park 904, Room C3.154d", city = "Amsterdam", region = "North Holland", postcode = "1098 XH", country = "Netherlands"}
+address = {street = "Science Park 904, Room C3.154d", city = "", region = "Amsterdam", postcode = "1098 XH", country = "Netherlands"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
