--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "MetaForum, city = "Eindhoven", region = "", postcode = "5612 AZ", country = "Netherlands"}
+address = {street = "MetaForum", city = "Eindhoven", region = "", postcode = "5612 AZ", country = "Netherlands"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
